[gd_scene load_steps=14 format=4 uid="uid://cca3lvj8wfak2"]

[ext_resource type="Script" uid="uid://b43xnljxfyx06" path="res://character/NPC/crow.gd" id="1_vaitv"]
[ext_resource type="AudioStream" uid="uid://d4d1trjkpcmmh" path="res://assets/sfx/foly/pigeon_fly_away.wav" id="2_qbrp3"]
[ext_resource type="PackedScene" uid="uid://bnk5012wxbkep" path="res://effects/blood.tscn" id="2_t54ta"]
[ext_resource type="PackedScene" uid="uid://c2iwxlcr77h5w" path="res://effects/feathers.tscn" id="3_ou0vd"]

[sub_resource type="Animation" id="Animation_t54ta"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_ou0vd"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 6]
}

[sub_resource type="Animation" id="Animation_vaitv"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="Animation" id="Animation_qbrp3"]
length = 0.2
loop_mode = 1
step = 0.014285714
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 4]
}

[sub_resource type="Animation" id="Animation_accx4"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_accx4"]
_data = {
&"disabled": SubResource("Animation_t54ta"),
&"fly": SubResource("Animation_ou0vd"),
&"idle": SubResource("Animation_vaitv"),
&"lift_off": SubResource("Animation_qbrp3"),
&"peck": SubResource("Animation_accx4")
}

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_kc1l4"]
_data = PackedByteArray("AAADAAUAAAABAAAAbAAAAGkAAACiAQAAUklGRpoBAABXRUJQVlA4TI4BAAAvawAaECcgECBEuPB/J0QgQMhQIF2nQIDwYMn/iYf5DwCwsnNBcm27YRsBTgN4mBSg/ytQC+6/LFmgJO9mZhHR/wmI/xqTX1HmYRwKfgccKpQDDjUTCRg4EwlgBiIBlANARk2cAzK08gyQwUwauiEnDd0wauimlQOrgZhiNcDvxGqAScnIPSoZuSHOS0ZufgcByIwCkKmYAjIQ0wJyFgXkLAqgYr7HHqt77LG6xx4rf32+vmT7kn59ib6E1wXFWrECHcWKOpfUuUSoc1a8l4r3igy8F7aGXNga8ky26QbIUZmM0822X2XStl+HAjVgMsYNr7OIaigoID6XjNwQ440l8dF5EoBMxtyAJrHx0cSwgIxFoGdBH8jJpRdsAFbc1s0s1EDepQsKIL5AdN6GWIpH1BV8SxMPSJaKvC/4+bO08/OE+FmLJ1RErfyDWsxkKO6SQZ0Dm27UeYstu3kPbDXA+w7ZMtCQnwQGaMjrCiyOGZ8raeSGjBtLgEhiWByTuJVjxmLJxPOxyedxjL9qAQ==")
size_override = Vector2(108, 105)

[sub_resource type="CircleShape2D" id="CircleShape2D_vaitv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qbrp3"]
radius = 40.012497

[node name="crow" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 18
script = ExtResource("1_vaitv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../spr_crow")
libraries = {
&"": SubResource("AnimationLibrary_accx4")
}

[node name="spr_crow" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, -17.5)
texture = SubResource("PortableCompressedTexture2D_kc1l4")
hframes = 3
vframes = 3
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"convert_fps_field": 60.0,
"convert_ms_field": 16.0,
"convert_to_fps": false,
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"scale": "1.0",
"slice": "",
"source": "res://assets/character/npc/crow.aseprite",
"source_uid": 8683400407549383909
}
metadata/_aseprite_wizard_source_file_hash_ = "170d5eb0cd4a9893f5d6600f3d526fc2"

[node name="tmr_peck" type="Timer" parent="."]
one_shot = true

[node name="blood" parent="." instance=ExtResource("2_t54ta")]
position = Vector2(0, -10)
emitting = false
one_shot = true

[node name="cls_crow" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_vaitv")

[node name="ara_lift_off" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="cls_lift_off" type="CollisionShape2D" parent="ara_lift_off"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_qbrp3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qbrp3")
volume_db = 3.506

[node name="tmr_queue_free" type="Timer" parent="."]
wait_time = 4.0

[node name="feathers" parent="." instance=ExtResource("3_ou0vd")]
emitting = false
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="tmr_peck" to="." method="_on_tmr_peck_timeout"]
[connection signal="body_entered" from="ara_lift_off" to="." method="_on_ara_lift_off_body_entered"]
[connection signal="timeout" from="tmr_queue_free" to="." method="_on_tmr_queue_free_timeout"]
